Refactor component aliases in components.json, add @radix-ui/react-slot dependency, implement new Button component, and update styles

--- a/components.json
+++ b/components.json
@@ -11,8 +11,8 @@
     "prefix": ""
   },
   "aliases": {
-    "components": "@/components",
-    "utils": "@/lib/utils",
+    "components": "@/_components",
+    "utils": "@/_lib/utils",
     "ui": "@/components/ui",
     "lib": "@/lib",
     "hooks": "@/hooks"
